# lmcvm

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  lmc.c  lmc.h  main.c  util.h
